--- a/2023013204_ReviwedbyMK316.ipynb
+++ b/2023013204_ReviwedbyMK316.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Name Question(😍You got it!): However, You could use input(); and punctuation is missing. 2/3"
+        "## Name Question(😍You got it!): However, You could use input(); and punctuation is missing. 2.5/3"
       ],
       "metadata": {
         "id": "mvrdvCz8c6LA"
@@ -100,7 +100,7 @@
         "id": "RdR6GrD6fElI",
         "outputId": "4b30822c-f208-4721-b795-b52a5aa33d8b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -158,7 +158,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## GGTS Question:😅 0/3"
+        "## GGTS Question:😅 1.5/3"
       ],
       "metadata": {
         "id": "0LyNWq_gk6ho"
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "4mZSUcVOmgyn"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,9 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
-        "The END"
+        "The END\n",
+        "\n",
+        "Coding: 6"
       ],
       "metadata": {
         "id": "gnyrWf_IPivU"
